--- a/style.css
+++ b/style.css
@@ -203,6 +203,24 @@ img {
 }
 
 
+/* 치트 시트 */
+
+h1 {
+    color: #333;
+}
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+th, td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: left;
+}
+th {
+    background-color: #f2f2f2;
+}
+
 
 
 
